@startuml er-diagram
!define TABLE(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <b>x</b>
!define unique(x) <color:green>x</color>
!define not_null(x) <u>x</u>
hide methods
hide stereotypes

TABLE(User,"User"){
  primary_key(id) : SERIAL
  --
  email : VARCHAR(100) UNIQUE
  login : VARCHAR(50) UNIQUE
  surname : VARCHAR(50)
  name : VARCHAR(50)
  password_hash : VARCHAR(255)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

TABLE(House, "House") {
  primary_key(id) : SERIAL
  --
  foreign_key(user_id) : INTEGER
  address : VARCHAR(200)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

TABLE(Sensor,"Sensor") {
  primary_key(id) : SERIAL
  --
  foreign_key(house_id) : INTEGER
  name : VARCHAR(100)
  type : VARCHAR(50)
  location : VARCHAR(100)
  status : VARCHAR(20)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

TABLE(Telemetry, "Telemetry") {
  primary_key(Id) : SERIAL
  --
  foreign_key(sensor_id) : INTEGER
  value : DOUBLE PRECISION
  status : VARCHAR(20)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

TABLE(Device, "Device") {
  primary_key(Id) : SERIAL
  --
  foreign_key(house_id) : INTEGER
  name : VARCHAR(100)
  type : VARCHAR(50)
  location : VARCHAR(100)
  status : VARCHAR(20)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

TABLE(Command, "Command") {
  primary_key(Id) : SERIAL
  --
  foreign_key(device_id) : INTEGER
  command : VARCHAR(50)
  parameters : TEXT
}

User ||--o{ House : "один (и только один) к нулю или многим"
House ||--o{ Sensor : "один (и только один) к нулю или многим"
House ||--o{ Device : "один (и только один) к нулю или многим"
Sensor ||--o{ Telemetry : "один (и только один) к нулю или многим"
Device ||--{ Command : "один ко многим"

@enduml